﻿更新履歴

==== Ver 2.4.4-dev(2019/xx/xx)
 * NEW: アカウント追加時の認可URLを右クリックでコピー可能にしました
 * CHG: pic.twitter.com の画像URLのフォーマット変更に対応
 * CHG: Instagramのサムネイルを表示するURLのパターンを追加
 * CHG: YouTubeのサムネイルを表示するURLのパターンを追加 (thx @Hawklaver!)
 * CHG: UserStreams関係の機能を削除
 * CHG: 設定画面にある通知関係の項目の配置を移動
 * CHG: タブ別の新着通知表示のデフォルト設定を変更
   * Reply, DM タブ以外は新着通知表示がデフォルトでオフになります（従来はタブの種別に関わらずデフォルトでオン）
 * CHG: 「Listの発言取得に公式RTを含める」のデフォルト設定をオンに変更
 * CHG: POSTキーのデフォルト設定を Ctrl+Enter に変更
 * FIX: DMの添付画像をブラウザで開く場合に使用するURLを変更
 * FIX: 大文字アルファベットを含むハッシュタグがユーザー情報画面で正しくリンク化されない不具合を修正 (thx @naminodarie!)
 * FIX: 初回起動時の設定画面でブラウザパスを入力しても認可URLを開く際に適用されない不具合を修正
 * FIX: URL自動短縮の設定値が正しく表示されない不具合を修正
 * FIX: 関連発言表示で一部のツイートの読み込みがエラーになると関連発言タブに何も表示されなくなる不具合を修正
 * FIX: 英語版のメッセージのtypoを修正 (thx @TheQuinbox!)
 * FIX: スリープからの復帰後に発言一覧の自動更新が停止する場合がある不具合を修正
 * FIX: システムの日時を変更すると発言一覧の更新間隔が正しく計算されない場合がある不具合を修正

==== Ver 2.4.3(2019/12/06)
 * FIX: 関連発言表示のタブを読み込み中に閉じるとエラーが発生する不具合を修正
 * FIX: 操作メニューの「タブ振り分けルール作成」から新規タブを作成するとエラーが発生する不具合を修正

==== Ver 2.4.2(2019/10/23)
 * FIX: タブ更新時にエラーが発生するとプロセスが異常終了する場合がある不具合を修正
 * FIX: エラー発生時にステータスバーの縦幅が2行分に広がり戻らなくなる場合がある不具合を修正
 * FIX: 表示中のタブの名前を変更するとエラーが発生する不具合を修正

==== Ver 2.4.1(2019/09/25)
 * FIX: 「タブを一覧の下に表示する」を無効にすると起動時にエラーが発生する不具合を修正 (thx @mulsys!)
 * FIX: 発言一覧の選択状態が正しく描画されない不具合を修正
 * FIX: 更新間隔を0秒に設定した場合に自動更新が停止されない不具合を修正 (thx @kamemory!)

==== Ver 2.4.0(2019/09/24)
 * NEW: Twemoji 12.0.0 に対応しました
  - Unicode 12.0 で追加された絵文字が表示されるようになります
 * CHG: DMの送信が完了したらDirectタブに送信したDMを即座に反映する
 * CHG: htn.to の短縮URLを展開する際に強制的にHTTPSを使用する
 * CHG: OpenTween内部で動作するタイマーの使用方法を見直し
  - 従来まで毎秒5回程度のタイマーイベントが常に発生していたのを、無操作時かつ発言一覧の更新がない間はほぼゼロになるよう改善しました
 * FIX: Twemojiを有効にすると絵文字の後に余分な文字が表示される場合がある不具合を修正
 * FIX: Tumblrのサムネイル表示時にエラーが表示される場合がある不具合を修正
 * FIX: 発言内URLを開く(Ctrl+E)でURLにマルチバイト文字を含むとエラーが発生する場合がある不具合を修正
 * FIX: 英語版のメッセージの誤りを修正 (thx @Tan90909090!)

==== Ver 2.3.1(2019/04/22)
 * FIX: 2019/5/20に予定されているTwitter APIの仕様変更によりエラーが発生する問題を修正
  - OpenTween v2.3.0 までのバージョンは2019/5/20以降に使用できなくなる可能性があります